--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -5,11 +5,13 @@ spring.datasource.password=postgres
 
 # Configuración de Hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+logging.level.org.hibernate.SQL=DEBUG	
+logging.level.org.hibernate.type=TRACE
 
 # Configuración del servidor
 server.port=8080
