SecurityConfiguration arreglada --> Referencia circular de propperties

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -16,3 +16,6 @@ logging.level.org.hibernate.type=TRACE
 # Configuración del servidor
 server.port=8080
 
+spring.main.allow-circular-references=true
+
+
