--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 # Configuración de la base de datos PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/crud
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=postgre
 
 # Configuración de Hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
